# FatSecretSync

./: .gitignore  Dockerfile  README.md  config.yaml  pre-requirements.txt  pyproject.toml  requirements.txt
fatsecret_sync/api/: client.py  errors.py
fatsecret_sync/api/models/: auth.py  common.py  errors.py  food.py  food_entry.py  profile.py
fatsecret_sync/cli/: common.py  sync.py  utils.py
fatsecret_sync/core/: sync.py  utils.py
fatsecret_sync/core/models/: config.py  creds.py  sync.py
fatsecret_sync/dev_scripts/: create_config_schema.py
fatsecret_sync/utils/: oauth.py
schemas/: config.schema.json
